Add cursor-pointer style to buttons

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,14 +5,21 @@
 }
 
 /* Remove default margin and set box-sizing */
-html, body {
+html,
+body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     line-height: normal;
 }
-*, *::before, *::after {
+*,
+*::before,
+*::after {
     box-sizing: inherit;
+}
+
+button {
+    @apply cursor-pointer;
 }
 
 @layer utilities {
